--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
     <artifactId>spymemcached</artifactId>
     <version>2.12.1</version>
 </dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+		</dependency>
 	</dependencies>
 </project>
